fixed admin on mobile

--- a/src/Pages/Hackathon/AbousUsStyle.css
+++ b/src/Pages/Hackathon/AbousUsStyle.css
@@ -6,10 +6,17 @@
 .forAdminProfileText {
   text-align: left !important;
 }
-.paddingForDiv {
-  margin-left: 10%;
-  margin-right: 10%;
-  /* position: static; */
+@media (min-width: 768px) {
+
+  .paddingForDiv {
+    margin-left: 10%;
+    margin-right: 10%;
+    /* position: static; */
+  }
+  .forAdminProfileIcon {
+    margin-right: 5%;
+    margin-left: 5%;
+  }
 }
 .forAdminProfileImg img {
   margin-right: 0%;
@@ -47,10 +54,6 @@
   display: flex;
   justify-content: center;
   padding: 6%;
-}
-.forAdminProfileIcon {
-  margin-right: 5%;
-  margin-left: 5%;
 }
 .forBackgroundOfAdminProfile {
   background-color: lightgrey;
@@ -108,5 +111,9 @@
   border-right: white solid;
 }
 .mobileAdminContainer {
-  margin: 5%;
+
+  width: 160px;
+  height: 310px;
+  float: left;
+
 }
